@@ -1,3 +1,9 @@
+2008-11-20  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* buff-menu.el (Buffer-menu-short-ellipsis): New constant.
+	(Buffer-menu-buffer+size): Use it, fix last change, and simplify.
+	(list-buffers-noselect): Don't need to pad.
+
 2008-11-20   Toru TSUNEYOSHI  <t_tuneyosi@hotmail.com>
 
 	* buff-menu.el (Buffer-menu-buffer+size, list-buffers-noselect):
